--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-svg": "13.9.0",
-    "react-native-svg-charts": "^5.4.0"
+    "react-native-svg-charts": "^5.4.0",
+    "d3-interpolate-path": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
