--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "d3": "^7.8.5",
     "d3-geo": "3.1.0",
+    "d3-interpolate-path": "*",
     "d3-scale": "4.0.2",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
@@ -18,9 +19,9 @@
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-svg": "13.9.0",
-    "react-native-svg-charts": "^5.4.0",
-    "d3-interpolate-path": "*"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
