--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-geo": "3.1.0",
     "d3-interpolate-path": "*",
     "d3-scale": "4.0.2",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
