--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
     "react-native-svg-charts": "^5.4.0",
